# xtm-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docker-build-push.yml
opencti_mcp/: README.md  graphql_queries.py  server.py
opencti_mcp/tools/: add_note.py  add_objects_to_case_rfi.py  create_case_rfi.py  create_external_reference.py  create_grouping.py  create_identity.py  create_label.py  create_pir.py  create_relationship.py  create_report.py  execute_graphql_query.py  get_entity_names.py  get_license_edition.py  get_query_fields.py  get_stix_relationships_mapping.py  get_types_definitions.py  get_types_definitions_from_schema.py  list_case_rfis.py  list_graphql_types.py  list_identities.py  list_labels.py  list_marking_definitions.py  list_pirs.py  list_stix_core_objects.py  list_stix_core_relationships.py  read_case_rfi.py  read_identity.py  read_label.py  read_marking_definition.py  read_pir.py  read_stix_core_object.py  read_stix_core_relationship.py  search_entities_by_name.py  tool_helpers.py  (+1 more)
tests/: conftest.py  mock_stdio_server.py  test_brand_posture_pack_tools.py  test_execute_graphql_query_tool.py  test_get_license_edition_tool.py  test_mutation_tools.py  test_pir_case_rfi_tools.py  test_transport_memory.py  test_transport_sse.py  test_transport_stdio.py  test_transport_streamable_http.py
(+8 files in other folders)
