[tool.poetry]
name = "xtm-one-opencti-mcp"
version = "0.1.0"
description = "XTM One: OpenCTI GraphQL MCP server"
license = "MIT"
readme = "README.md"
packages = [
  { include = "opencti_mcp" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gql = ">=3.5.0"
aiohttp = ">=3.9.0"
python-dotenv = ">=1.0.0"
mcp = ">=1.1.0"

[tool.poetry.scripts]
opencti-mcp = "opencti_mcp.server:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0"
black = ">=24.4.0"
mypy = ">=1.7.0"
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
