[project]
name = "xtm-mcp"
version = "1.0.0"
description = "MCP server for the entire XTM suite"
readme = "README.md"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
